--- a/style.css
+++ b/style.css
@@ -97,50 +97,103 @@ body {
   display: block;
   margin-top: 100px;
 }
-/* .banner-flx {
-  display: flex;
-  flex-direction: column;
-} */
+
 .banner-flx h2 {
   font-size: 44px;
   color: #1e1e5c;
   text-align: center;
 }
-.foursection-flx {
+
+/* --------------------------------------------------fourbox  */
+.fourbox-flx {
   display: flex;
-  border: 2px solid red;
-  width: 25%;
-  background-color: #7ca0f7;
+  justify-content: space-between;
 }
-.wash-fold-colu {
+.firstboox{
   display: flex;
   flex-direction: column;
-  height: 300px;
+  width: 23%;
+  background-color: #7497f6;
+  border-radius: 10px;
+ 
 }
-.icn-flx{
-    display: flex;
+.first-box {
+  padding: 20px;
+  
 }
-.crcle{
-    position: relative;
-    width: 50px;
-    height: 50px;
-    background-color: #6082F2;
-    border: 2px solid;
-    border-radius: 100%;
-    margin-right: -13px;
+
+.crcle-flx {
+  display: flex;
+  
 }
-.icon-washing{
-    position: absolute;
-    top:50%;
-left: 50%;
-transform: translate(-50%, -50%);
+.circle-wth{
+  position: relative;
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  background-color: #5654AD;
+ 
+}
+.icon-washing {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .icon-washing i{
+  color: white;
+  padding: 20px;
+}
+.circle-wth2{
+  position: relative;
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  background-color: #5654AD;
+  margin-left: -10px;
+
+}
+.icon-washing2 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.icon-washing2 i{
+  color: white;
+  padding: 20px;
+}
+.box-imag {
+  width: 22%;
+  margin-left: 190px;
+  
+}
+.box-imag img{
+  width: 100%;
+}
+.wash-txt h2{
+margin-top:10px;
+color: white;
+}
+.wash-txt p{
+  margin-top:10px;
+  color: white;
+  }
+  .button {
+    background-color:#A0B7F7;
+    border: none;
     color: white;
-}
-.imagee{
-    width: 100px;
-}
-.imagee img{
-width: 100%;
-}
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 8px;
+    font-weight: 900;
+  }
+  /* '-----------------------------------second box ------------- */
+ 
+/* -------------------------------------------------------------third box  */
+  
+
