--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body {
     left: 0;
     top: 0;
     bottom: 0;
-    background: url(../images/bg-1.jpg) no-repeat center;
+    background: url(./images/bg-1.jpg) no-repeat center;
     display: flex;
     flex-direction: column;
 }
