--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,400&display=swap');
+
+
+body {
+  font-family: 'Poppins', sans-serif;
+}
 
 * {
     margin: 0;
@@ -15,11 +20,7 @@
     padding: 0 20px;
 }
 
-body {
-    margin: 0;
-    padding: 0;
-    font-family: 'PT Serif', serif;
-}
+
 
 
 
