--- a/style.css
+++ b/style.css
@@ -117,30 +117,30 @@ body {
   flex-direction: column;
   height: 300px;
 }
-.icn-flx{
-    display: flex;
+.icn-flx {
+  display: flex;
 }
-.crcle{
-    position: relative;
-    width: 50px;
-    height: 50px;
-    background-color: #6082F2;
-    border: 2px solid;
-    border-radius: 100%;
-    margin-right: -13px;
+.crcle {
+  position: relative;
+  width: 50px;
+  height: 50px;
+  background-color: #6082f2;
+  border: 2px solid;
+  border-radius: 100%;
+  margin-right: -13px;
 }
-.icon-washing{
-    position: absolute;
-    top:50%;
-left: 50%;
-transform: translate(-50%, -50%);
+.icon-washing {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
-.icon-washing i{
-    color: white;
+.icon-washing i {
+  color: white;
 }
-.imagee{
-    width: 100px;
+.imagee {
+  width: 100px;
 }
-.imagee img{
-width: 100%;
+.imagee img {
+  width: 100%;
 }
