--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,400&display=swap");
 body {
   font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
 }
 * {
   margin: 0;
@@ -107,6 +108,7 @@ body {
 .fourbox-flx {
   display: flex;
   justify-content: space-between;
+  margin-top: 50px;
 }
 .firstboox {
   display: flex;
@@ -273,4 +275,176 @@ body {
   cursor: pointer;
   border-radius: 8px;
   font-weight: 900;
+}
+/*------------------------------------ sub-banner */
+.sub-banner {
+  position: relative;
+  display: block;
+  margin-top: 80px;
+  z-index: 999;
+
+}
+.sub-banner::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 200px;
+  transform: rotate(5deg);
+  z-index: 666;
+  bottom: -210px;
+   left:-150px;
+  background-color: #e6edfded;
+}
+.sub-banner::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 200px;
+right: -150px;
+  transform: rotate(-5deg);
+  bottom: -210px;
+  background-color: #e6edfd;
+  z-index: 666;
+}
+
+.sub-banner-flx {
+  display: flex;
+}
+.machine-imag {
+  width: 15%;
+}
+.machine-imag img {
+  width: 100%;
+}
+.schedule-txt {
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  gap: 30px;
+  color: #949fc2;
+}
+.information {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  padding: 50px;
+}
+.sign-direction i {
+  margin-right: 20px;
+}
+
+.informtion-box {
+  padding: 10px;
+  border-bottom: 1px solid gainsboro;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.buttn-two {
+  text-align: center;
+}
+.booknow-butn-two {
+  background-color: #6082f2;
+  padding: 16px 107px;
+  border: none;
+  border-radius: 8px;
+  color: white;
+  cursor: pointer;
+}
+.booknow-butn-two h4 {
+  font-size: 17px;
+}
+/* <!--------------------------------------------------------------- book service 3 eye steps  --> */
+.curv-backimage {
+  position: relative;
+  display: block;
+  z-index: 999;
+  margin-top: 80px;
+  background-color: #e6edfd;
+}
+.eye-step h2 {
+  font-size: 44px;
+  text-align: center;
+  color: #1e1e5c;
+}
+.tree-imag-flxx {
+  display: flex;
+  justify-content: space-between;
+  gap: 80px;
+  padding: 100px;
+}
+.imag-ttext {
+  display: flex;
+  flex-direction: column;
+}
+.white-circle {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  background-color:white;
+  border-radius: 100%;
+}
+.smal-crcle {
+  position: relative;
+  width: 40px;
+  height: 40px;
+  background-color: #5F81F2;
+  border-radius: 100%;
+}
+.zero-one  {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+.green
+{display: inline-block;
+  background-color: pink;
+  border-radius:50%;
+}
+.green h1{
+  padding: 30px;
+}
+.frst-iimage{
+  position: absolute;
+  left: 91%;
+  top: 28%;
+  transform: translate(-50%, -50%);
+  width: 200px;
+}
+.frst-iimage img{
+width: 100%;
+}
+.buttn-thre {
+  text-align: center;
+  margin-bottom: 50px;
+}
+.booknow-butn-thre {
+  background-color: #6082f2;
+  padding: 16px 107px;
+  border: none;
+  border-radius: 8px;
+  color: white;
+  cursor: pointer;
+}
+.booknow-butn-thre h4 {
+  font-size: 17px;
+}
+/* <!----------------------------------------------------------------- OUR FEATURES  --> */
+.features{
+  display: block;
+}
+.our h2{
+  font-size: 44px;
+  text-align: center;
+  color: #1e1e5c;
+}
+.frature-flx{
+  display: flex;
+  border: 2px solid red;
+}
+.trested-flx{
+  display: flex;
+  border: 2px solid yellow;
+  width: 50%;
 }
