--- a/style.css
+++ b/style.css
@@ -12,8 +12,7 @@ body {
 .container {
   margin: 0 auto;
   overflow: hidden;
-  max-width: 1300px;
-  width: 100%;
+  width: 1300px;
   padding: 0 20px;
 }
 .navbar {
@@ -282,7 +281,6 @@ body {
   display: block;
   margin-top: 80px;
   z-index: 999;
-
 }
 .sub-banner::after {
   content: "";
@@ -292,7 +290,7 @@ body {
   transform: rotate(5deg);
   z-index: 666;
   bottom: -210px;
-   left:-150px;
+  left: -150px;
   background-color: #e6edfded;
 }
 .sub-banner::before {
@@ -300,7 +298,7 @@ body {
   position: absolute;
   width: 100%;
   height: 200px;
-right: -150px;
+  right: -150px;
   transform: rotate(-5deg);
   bottom: -210px;
   background-color: #e6edfd;
@@ -381,39 +379,39 @@ right: -150px;
   position: relative;
   width: 200px;
   height: 200px;
-  background-color:white;
+  background-color: white;
   border-radius: 100%;
 }
 .smal-crcle {
   position: relative;
   width: 40px;
   height: 40px;
-  background-color: #5F81F2;
+  background-color: #5f81f2;
   border-radius: 100%;
 }
-.zero-one  {
+.zero-one {
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
 }
-.green
-{display: inline-block;
+.green {
+  display: inline-block;
   background-color: pink;
-  border-radius:50%;
+  border-radius: 50%;
 }
-.green h1{
+.green h1 {
   padding: 30px;
 }
-.frst-iimage{
+.frst-iimage {
   position: absolute;
   left: 91%;
   top: 28%;
   transform: translate(-50%, -50%);
   width: 200px;
 }
-.frst-iimage img{
-width: 100%;
+.frst-iimage img {
+  width: 100%;
 }
 .buttn-thre {
   text-align: center;
@@ -431,20 +429,268 @@ width: 100%;
   font-size: 17px;
 }
 /* <!----------------------------------------------------------------- OUR FEATURES  --> */
-.features{
+.features {
   display: block;
+  padding-top: 60px;
 }
-.our h2{
+
+.our h2 {
   font-size: 44px;
   text-align: center;
   color: #1e1e5c;
 }
-.frature-flx{
+/*--------------- first flx  */
+.frature-flx {
   display: flex;
-  border: 2px solid red;
+  padding: 100px;
+  color: blue;
 }
-.trested-flx{
+.trested-flx {
   display: flex;
-  border: 2px solid yellow;
   width: 50%;
+  gap: 30px;
+}
+/* --------------second flx  */
+.frature-flx2 {
+  display: flex;
+  padding: 100px;
+  margin-top: -105px;
+  color: blue;
+}
+.trested-flx2 {
+  display: flex;
+  width: 50%;
+  gap: 30px;
+}
+
+.circle--icons {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
+  background-color: #e0e7fc;
+}
+.wave-icon i {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 30px;
+}
+.trest-txt {
+  width: 60%;
+}
+.trest-txt h2 {
+  font-size: 25px;
+  padding-bottom: 20px;
+}
+/* <!---------------------------------------------- download washon  app --> */
+.downlod {
+  display: block;
+  background-color: #7da1f7;
+  position: relative;
+  z-index: 999;
+}
+.downlod::after {
+  content: "";
+  position: absolute;
+  width: 80%;
+  height: 93px;
+  left: -150px;
+  transform: rotate(-5deg);
+  background-color: #7da1f7;
+  z-index: 666;
+  bottom: -50px;
+}
+
+.downlod::before {
+  content: "";
+  position: absolute;
+  width: 80%;
+  height: 93px;
+  right: -150px;
+  transform: rotate(5deg);
+  background-color: #7da1f7;
+  z-index: 666;
+  bottom: -50px;
+}
+
+.washon-flx {
+  display: flex;
+}
+.washon-wth {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  margin-top: 50px;
+}
+.washon-wth h2 {
+  margin-top: 50px;
+  color: white;
+  font-size: 44px;
+}
+.washon-wth p {
+  color: white;
+}
+.apple {
+  display: flex;
+  gap: 25px;
+  margin-bottom: 100px;
+}
+.app-flx {
+  display: flex;
+  border: 2px solid rgb(4, 4, 236);
+  width: 25%;
+  align-items: center;
+  border-radius: 10px;
+  color: rgb(4, 4, 236);
+}
+.appstor {
+  display: flex;
+  flex-direction: column;
+}
+.apple-icon {
+  width: 40%;
+  color: rgb(4, 4, 236);
+}
+.apple-icon img {
+  width: 100%;
+}
+.appstor h6 {
+  font-size: 10px;
+}
+.iphone-wdth {
+  width: 50%;
+}
+.iphone {
+  width: 538px;
+  position: absolute;
+  z-index: 700;
+}
+.iphone img {
+  width: 100%;
+  margin-top: -58px;
+}
+/* -----------------------------------------------------our customer says  */
+.custmr {
+  display: block;
+  margin-top: 200px;
+  margin-bottom: 100px;
+  
+}
+.custmr-flx {
+display: flex !important;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  padding: 0 300px;
+ 
+ 
+}
+.custmr-flx h2 {
+  font-size: 33px;
+  color: #1e1e5c;
+  text-align: center;
+}
+
+.imge-boy {
+  width: 150px;
+  height: 150px;
+  border: 10px solid #f5f5f5;
+  border-radius: 100%;
+
+}
+.imge-boy img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 100%;
+  
+}
+.custmr-flx h4 {
+  font-size: 20px;
+  color: #7784c9;
+  text-align: center;
+}
+.custmr-flx p {
+  text-align: center;
+  color: #aab1c5;
+}
+/*------------------------ footer  */
+.footr{
+  display: block;
+  background-color: #272744;
+}
+.foot-flx{
+  display: flex;
+  margin: 80px auto;
+  color: white;
+  justify-content: space-between;
+}
+.foot-logo{
+width: 10%;
+}
+.foot-logo img{
+width: 100%;
+} 
+.info-flx{
+  display: flex;
+  flex-direction: column;
+}
+.info-flx-icon{
+  display: flex;
+  gap: 20px;
+
+}
+.info-flx-icon h6{
+  margin-top: 20px;
+}
+.icon-crcl{
+  width: 40px;
+  height: 40px;
+  background-color: #D3D3D9;
+  border-radius: 100%;
+  position:relative;
+
+}
+.icon-crcl i{
+position:absolute;
+left:50%;
+top:50%;
+transform:translate(-50%, -50%);
+color: black;
+}
+.info-flx-app{
+display: flex;
+flex-direction: column;
+gap: 10px;
+}
+.end-fot{
+  display: flex;
+  
+}
+
+.app-flx-foot{
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+}
+.apple-icon-foot{
+  width: 30px;
+}
+.apple-icon-foot img{
+  width: 100%;
+}
+
+.yrar{
+  text-align: center;
+}
+.yrar p{
+  font-size: 25px;
+  font-weight: 100px;
+}
+.yrar span{
+  color: #7BA0F7;
 }
